@@ -183,7 +183,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1212 $"))
+    (let ((rev "$Revision: 1.1213 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1136))
 	   (format "1.4.%d" (+ rev 50)))))
@@ -1817,6 +1817,12 @@ Here are some predefined functions which can be used for those ways:
 	   (list :tag "Estimate with a user defined function"
 		 function
 		 (repeat :tag "Arguments" sexp)))))
+
+(defcustom w3m-enable-google-feeling-lucky t
+  "Non-nil enables you to enter any words as well as a url when prompted.
+In that case, emacs-w3m uses Google to search for the words."
+  :group 'w3m
+  :type 'boolean)
 
 (defcustom w3m-google-feeling-lucky-charset
   (cond
@@ -3877,6 +3883,8 @@ if it has no scheme part."
 	     default
 	     (not initial))
 	default
+      (unless w3m-enable-google-feeling-lucky
+	(setq feeling-lucky nil))
       (setq url (let ((minibuffer-setup-hook
 		       (append minibuffer-setup-hook '(beginning-of-line)))
 		      (ofunc (lookup-key minibuffer-local-completion-map " ")))
