@@ -1,3 +1,8 @@
+2006-08-31  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-enable-google-feeling-lucky): New variable.
+	(w3m-input-url): Disable the Google feeling lucky feature if it is nil.
+
 2006-08-28  David Hansen  <david.hansen@physik.fu-berlin.de>
 
 	* shimbun/sb-the-onion.el: New module.
